KAAV-1473 princibles and draft not showing form values when project has been created fix

--- a/src/components/projectEdit/ProjectEdit.scss
+++ b/src/components/projectEdit/ProjectEdit.scss
@@ -770,6 +770,9 @@
     .add-content{
       display: none;
     }
+    .remove-content{
+      display: none;
+    }
   }
 
   .actions{
